--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -21,9 +21,22 @@
     "dup": "docker compose up"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.6.1",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestlab/google-recaptcha": "^3.9.0",
+    "@prisma/client": "^6.3.1",
+    "@react-email/components": "^0.0.33",
+    "@react-email/html": "^0.0.11",
+    "argon2": "^0.41.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "connect-redis": "^8.0.1",
+    "cookie-parser": "^1.4.7",
+    "express-session": "^1.18.1",
+    "ioredis": "^5.5.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -31,10 +44,14 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/react": "^19.0.9",
     "@types/supertest": "^6.0.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
