--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -18,7 +18,11 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "dup": "docker compose up"
+    "dup": "docker compose up",
+    "prisma:studio": "npx prisma studio",
+    "db:migrate:dev": "npx prisma migrate dev",
+    "db:reset": "npx prisma migrate reset",
+    "db:push": "npx prisma db push"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.6.1",
