--- a/auth-server/.env_example
+++ b/auth-server/.env_example
@@ -4,6 +4,15 @@ APPLICATION_PORT=4000
 APPLICATION_URL='http://localhost:${APPLICATION_PORT}'
 ALLOWED_ORIGIN='http://localhost:3000'
 
+COOKIES_SECRET='secret'
+SESSION_SECRET='secret'
+SESSION_NAME='session'
+SESSION_DOMAIN='localhost'
+SESSION_MAX_AGE='30d'
+SESSION_HTTP_ONLY=true
+SESSION_SECURE=false
+SESSION_FOLDER='sessions:'
+
 POSTGRES_USER='root'
 POSTGRES_PASSWORD='123456'
 POSTGRES_HOST='localhost'
